# ghc-elaboration-test

./: LICENSE  PPP.hs  QQQ.hs  README.md  ghc-elaboration-test.cabal  stack.yaml
src/: B.hs  Main.hs  c.hs
src/Test/: Plugin.hs
