name:                ghc-elaboration-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ghc-elaboration-test#readme
license:             BSD3
license-file:        LICENSE
author:              Yiyun Liu
maintainer:          liuyiyun@terpmail.umd.edu
copyright:           2020 Yiyun Liu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Test.Plugin
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , ghc-paths
                     , ghc-boot-th
                     , containers
                     , mtl
  ghc-options:         -Wall
